--- a/resources/views/admin/templates/choose.twig
+++ b/resources/views/admin/templates/choose.twig
@@ -8,13 +8,15 @@
 <div class="modal-body">
     {% if not types.isEmpty() %}
         <ul class="nav nav-pills nav-stacked">
-            {% for type, name in types %}
-                <li class="nav-item">
-                    <a href="{{ url_to('admin/templates/' ~ route_parameter('group') ~ '/create?type=' ~ type) }}"
-                       class="nav-link">
-                        <strong>{{ name|upper }}</strong>
-                    </a>
-                </li>
+            {% for type, extensions in types %}
+                {% for extension in extensions %}
+                    <li class="nav-item">
+                        <a href="{{ url_to('admin/templates/' ~ route_parameter('group') ~ '/create?extension=' ~ extension) }}"
+                           class="nav-link">
+                            <strong>{{ config('anomaly.module.templates::templates.mode.' ~ extension)|upper }}</strong>
+                        </a>
+                    </li>
+                {% endfor %}
             {% endfor %}
         </ul>
     {% else %}
