--- a/resources/views/admin/templates/choose.twig
+++ b/resources/views/admin/templates/choose.twig
@@ -8,11 +8,11 @@
 <div class="modal-body">
     {% if not types.isEmpty() %}
         <ul class="nav nav-pills nav-stacked">
-            {% for type, name in types %}
+            {% for extension, type in types %}
                 <li class="nav-item">
                     <a href="{{ url_to('admin/templates/' ~ route_parameter('group') ~ '/create?type=' ~ type) }}"
                        class="nav-link">
-                        <strong>{{ name|upper }}</strong>
+                        <strong>{{ extension|upper }}</strong>
                     </a>
                 </li>
             {% endfor %}
