--- a/resources/views/admin/groups/choose.twig
+++ b/resources/views/admin/groups/choose.twig
@@ -6,6 +6,9 @@
 </div>
 
 <div class="modal-body">
+
+    {% include "streams::modals/filter" %}
+    
     {% if not groups.isEmpty() %}
         <ul class="nav nav-pills nav-stacked">
             {% for group in groups %}
